tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@list_comprehension_multiple_for.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/list_comprehension_multiple_for.txt
---
error: List comprehensions support only a single `for` clause.
 --> list_comprehension_multiple_for.txt:1:18
  |
1 | {{ [x for x in xs for y in ys] }}
  |                   ^^^
